Issue #2212201 by Andy_Alert: Added non Flash slideshow, both now responsive and repecting z-index.

--- a/flickr.css
+++ b/flickr.css
@@ -53,3 +53,20 @@ span.flickr-credit {
     margin-bottom: 5px;
   }
 }
+
+.flickr-photoset-slideshow {
+  height: 0;
+  width: 100%;
+  /*Change percentage below to change ratio. Currently 16:9 (as most screens).*/
+  padding-bottom: 56.25%;
+  overflow: hidden;
+  position: relative;
+}
+
+.flickr-photoset-slideshow object {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
